--- a/package.json
+++ b/package.json
@@ -12,23 +12,15 @@
     "dependencies": {
         "@smallwei/avue": "^1.0.25",
         "axios": "^0.18.0",
-        "driver.js": "^0.6.2",
         "element-ui": "^2.4.5",
-        "file-saver": "^1.3.8",
-        "html2canvas": "^1.0.0-alpha.12",
         "js-cookie": "^2.2.0",
         "mockjs": "^1.0.1-beta3",
-        "moment": "^2.22.2",
         "nprogress": "^0.2.0",
         "script-loader": "^0.7.2",
         "vue": "^2.5.16",
         "vue-axios": "^2.1.2",
-        "vue-clipboard2": "^0.2.1",
-        "vue-json-tree-view": "^2.1.4",
-        "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.0.1",
-        "vuex": "^3.0.1",
-        "xlsx": "^0.13.3"
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.0.0",
