feat(cli): update new cli

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
         "@smallwei/avue": "^1.0.25",
         "axios": "^0.18.0",
+        "babel-polyfill": "^6.26.0",
+        "classlist-polyfill": "^1.2.0",
         "element-ui": "^2.4.5",
         "js-cookie": "^2.2.0",
         "mockjs": "^1.0.1-beta3",
