--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test:e2e": "vue-cli-service test:e2e"
     },
     "dependencies": {
-        "@smallwei/avue": "^1.0.25",
+        "@smallwei/avue": "^1.3.4-beta1",
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
         "classlist-polyfill": "^1.2.0",
@@ -25,12 +25,12 @@
         "vuex": "^3.0.1"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.0.0",
-        "@vue/cli-plugin-e2e-cypress": "^3.0.0",
-        "@vue/cli-plugin-eslint": "^3.0.0",
-        "@vue/cli-plugin-unit-mocha": "^3.0.0",
-        "@vue/cli-service": "^3.0.0",
-        "@vue/test-utils": "^1.0.0-beta.20",
+        "@vue/cli-plugin-babel": "^3.1.1",
+        "@vue/cli-plugin-e2e-cypress": "^3.1.2",
+        "@vue/cli-plugin-eslint": "^3.1.5",
+        "@vue/cli-plugin-unit-mocha": "^3.1.1",
+        "@vue/cli-service": "^3.1.4",
+        "@vue/test-utils": "^1.0.0-beta.25",
         "chai": "^4.1.2",
         "node-sass": "^4.9.0",
         "sass-loader": "^7.0.1",
