新增消息提醒

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test:e2e": "vue-cli-service test:e2e"
     },
     "dependencies": {
-        "@smallwei/avue": "^1.3.4-beta1",
+        "@smallwei/avue": "^1.4.2",
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
         "classlist-polyfill": "^1.2.0",
