--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "avue-cli",
-    "version": "2.0.0",
+    "name": "avuex-cli",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
