--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "script-loader": "^0.7.2",
         "vue": "^2.5.16",
         "vue-axios": "^2.1.2",
+        "vue-i18n": "^8.7.0",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1"
     },
