--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
+        "analyz": "npm_config_report=true npm run build",
         "test:unit": "vue-cli-service test:unit",
         "test:e2e": "vue-cli-service test:e2e"
     },
@@ -31,7 +32,8 @@
         "chai": "^4.1.2",
         "node-sass": "^4.9.0",
         "sass-loader": "^7.0.1",
-        "vue-template-compiler": "^2.5.17"
+        "vue-template-compiler": "^2.5.17",
+        "webpack-bundle-analyzer": "^3.0.3"
     },
     "lint-staged": {
         "*.js": [
