--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "avuex-cli",
-  "version": "1.0.0",
+  "name": "avue-cli",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,6 +11,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "avue-plugin-ueditor": "^0.0.9",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "classlist-polyfill": "^1.2.0",
